syntax = "proto3";

package seriesgrpc;

service SeriesGrpcService {
	rpc CreateUpdateSeries (SeriesModel) returns (SeriesModel);
	rpc SearchSeries (SearchRequest) returns (stream SeriesModel);
	rpc SearchOneSeries (SearchRequest) returns (SeriesModel);
}

message GetAllRequest {}

message SearchRequest {
	string id = 1;
	string slug = 2;
	string name = 3;
	int32 year = 4;
	string aliasValue = 5;
}

message SeriesAliasModel {
	string idType = 1;
	string idValue = 2;
}

message SeriesModel {
	string slug = 1;
	string name = 2;
	int32 year = 3;
	string imageName = 4;
	string externalid = 5;
	repeated SeriesAliasModel seriesAliases = 6;
}
